--- a/src/App.css
+++ b/src/App.css
@@ -122,7 +122,7 @@ body {
 .App-content {
   width: 100%;
   margin: 0 auto;
-  width: 80%;
+  width: 60%;
   padding-top: 50px;
 }
 
@@ -138,7 +138,7 @@ body {
 
 .populaires-content {
   width: 100%;
-  display: flex; 
+  display: flex;
   justify-content: space-around;
   margin-top: 30px;
   flex-wrap: wrap;
@@ -160,7 +160,7 @@ body {
 
 .populaires-content-item-text h3 {
   color: #7a7a7a;
-  font-size: .95rem;
+  font-size: 0.95rem;
   font-weight: 300;
 }
 
@@ -169,6 +169,28 @@ body {
   font-weight: 600;
 }
 
+.blocktext {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: #ffffff;
+  margin-top: 20px;
+  padding: 2rem 0;
+  padding: 2rem 3rem;
+  gap: 5px;
+  /* width: 10%; */
+}
+
+.blocktext h3 {
+  color: #7a7a7a;
+  font-size: 1.2rem;
+  font-weight: 300;
+}
+
+.blocktext p {
+  text-align: center;
+}
 
 /* .App {
   text-align: center;
